--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,46 @@
-<div>
-    <label>
-        <input type="radio" name="radiobtn" (change)= "toggleDiv('first')">Radio button1
-    </label>
-</div>
-<div>
-    <label>
-        <input type="radio" name="radiobtn" (change)= "toggleDiv('second')">Radio button 2
-    </label>
-</div>
-<div *ngIf="showFirstDiv">
-    <p>first div show</p>
-</div>
-<div *ngIf="showSecondDiv">
-    <p>second div show</p>
-</div>
+
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="./assets/images/image1.jpg" class="w-50"  alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="./assets/images/image2.jpg" class="w-50"alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="./assets/images/image3.jpg" class="w-50" alt="...">
+      </div>
+    </div>
+   <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-target="#carouselExampleControls" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </button>
+  </div>
+
+  <!-- <button class="btn btn-primary" (click)="onSubmit()">Admin</button> -->
+
+
+
+
+
+
+
+
+
+
+
+<!-- <app-admin></app-admin>
+<app-user-data></app-user-data> -->
+<app-binding></app-binding>
+<router-outlet></router-outlet>
+
+
+
+
+
 
 
